--- a/index.html
+++ b/index.html
@@ -417,6 +417,6 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="js/main.js?v=20241212"></script>
+    <script src="js/main.js?v=20241212-4"></script>
 </body>
 </html>
